--- a/views/home.erb
+++ b/views/home.erb
@@ -281,19 +281,19 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </a>
-            <a class="brand" href="#">Change You Can Believe In</a>
+            <a class="brand" href="#">CHANGE YOU CAN BELIEVE IN</a>
             <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
             <div class="nav-collapse collapse">
               <ul class="nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="http://itp.nyu.edu/~tca241/sinatra/change/about">About</a></li>
-                <li><a href="http://itp.nyu.edu/~tca241/sinatra/change/savings">Savings</a></li>
-                <li><a href="http://itp.nyu.edu/~tca241/sinatra/change/trinkets">Trinkets</a></li>
+                <li><a href="../about">About</a></li>
+                <li><a href="../savings">Savings</a></li>
+                <li><a href="../trinkets">Trinkets</a></li>
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Analyze <b class="caret"></b></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Analyze & Tag<b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Last Collection</a></li>
-                    <li><a href="#">Coins Counted</a></li>
+                    <li><a href="../lastcollection">Last Collection</a></li>
+                    <li><a href="../newtag">Add a Tag</a></li>
 <!--
                     <li class="divider"></li>
                     <li class="nav-header">Nav header</li>
