--- a/views/layout.erb
+++ b/views/layout.erb
@@ -39,18 +39,26 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Project name</a>
+          <a class="brand" href="/">CHANGE YOU CAN BELIEVE IN</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="/">Home</a></li>
+                <li><a href="../about">About</a></li>
+                <li><a href="../savings">Savings</a></li>
+                <li><a href="../trinkets">Trinkets</a></li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Analyze & Tag<b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="../lastcollection">Last Collection</a></li>
+                    <li><a href="../newtag">Add a Tag</a></li>
+                    </li>
+                  </ul>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
       </div>
     </div>
-    
+
 
     	<%= yield %>
 
