--- a/views/about.erb
+++ b/views/about.erb
@@ -1,7 +1,7 @@
 
     <div class="container">
 
-      <h1>Bootstrap starter template</h1>
-      <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
+      <h1>About Change You Can Believe In</h1>
+      <p>This is a placeholder page.</p>
 
     </div> <!-- /container -->
