money gem + test db

--- a/views/savings.erb
+++ b/views/savings.erb
@@ -3,5 +3,16 @@
 
       <h1>Bootstrap starter template</h1>
       <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
+      
+      <p>Last Total <%= @lasttotal.total %></p>
+      <p>Total Penny <%= @totalpenny %> </p>
+      <p>That's $<%= @pennymoney %> </p>
+      <p>Total Nickel <%= @totalnickel %> </p>
+      <p>That's $<%= @nickelmoney %> </p>
+      <p>Total Dime <%= @totaldime %> </p>
+      <p>That's $<%= @dimemoney %> </p>
+      <p>Total Quarter <%= @totalquarter %> </p>
+      <p>That's $<%= @quartermoney %> </p>
+
 
     </div> <!-- /container -->
