--- a/views/home.erb
+++ b/views/home.erb
@@ -326,7 +326,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="http://itp.nyu.edu/~tca241/sinatra/change/public/img/slide-02.jpg" alt="">
+          <img src="http://changeitp-assets.s3.amazonaws.com/img/slide-02.jpg" alt="">
           <div class="container">
             <div class="carousel-caption">
               <h1>Another example headline.</h1>
