testing heroku datamapper

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -44,13 +44,13 @@
             <ul class="nav">
               <li><a href="/">Home</a></li>
                 <li><a href="../about">About</a></li>
-                <li><a href="../savings">Savings</a></li>
-                <li><a href="../trinkets">Trinkets</a></li>
+                <li><a href="../savings">Your Counter</a></li>
+                <li><a href="../trinkets">What It's Worth</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Analyze & Tag<b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li><a href="../lastcollection">Last Collection</a></li>
-                    <li><a href="../newtag">Add a Tag</a></li>
+                    <li><a href="../lastcollection">Collection Analytics</a></li>
+                    <li><a href="../newtag">Add a New Item</a></li>
                     </li>
                   </ul>
             </ul>
