--- a/views/about.erb
+++ b/views/about.erb
@@ -1,7 +1,4 @@
-
-    <div class="container">
-
-      <h1>About Change You Can Believe In</h1>
-      <p>This is a placeholder page.</p>
-
-    </div> <!-- /container -->
+<div class="container">
+  <h1>About Change You Can Believe In</h1>
+  <p>This is a placeholder page. <a href="http://itp.howtomworks.com/change">In the mean time check out my blog</a></p>
+</div>
