--- a/views/fail.erb
+++ b/views/fail.erb
@@ -1,7 +1,4 @@
-
-    <div class="container">
-
-      <h1>Bootstrap starter template</h1>
-      <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
-
-    </div> <!-- /container -->
+<div class="container">
+  <h1>FAIL</h1>
+  <a href="../newtag">Try again?</a>
+</div>
