--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,72 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title><%=@title%></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Change You Can Believe is coin collector that represents your savings in tangible things.">
-    <meta name="author" content="Tom Arthur - NYU ITP">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Change You Can Believe is coin collector that represents your savings in tangible things." />
+    <meta name="author" content="Tom Arthur - NYU ITP" />
     <!-- Le styles -->
-    <link href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
     <style>
       body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+      padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
       }
-   </style>
-
+    </style>
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
     <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/ico/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/ico/apple-touch-icon-72-precomposed.png">
-                    <link rel="apple-touch-icon-precomposed" href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/ico/apple-touch-icon-57-precomposed.png">
-                                   <link rel="shortcut icon" href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/ico/favicon.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/ico/apple-touch-icon-144-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/ico/apple-touch-icon-114-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/ico/apple-touch-icon-72-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/ico/apple-touch-icon-57-precomposed.png" />
+    <link rel="shortcut icon" href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/ico/favicon.png" />
   </head>
-
   <body>
-
-  <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
           </a>
           <a class="brand" href="/">CHANGE YOU CAN BELIEVE IN</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li><a href="/">Home</a></li>
-                <li><a href="../about">About</a></li>
-                <li><a href="../savings">Your Counter</a></li>
-                <li><a href="../trinkets">What It's Worth</a></li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Analyze & Tag<b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="../lastcollection">Collection Analytics</a></li>
-                    <li><a href="../newtag">Add a New Item</a></li>
-                    </li>
-                  </ul>
+              <li><a href="../about">About</a></li>
+              <li><a href="../trinkets">Your Change [Trinkets]</a></li>
+              <li><a href="../savings">Your Savings [Cash Money]</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Analyze & Tag<b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="../lastcollection">Collection Analytics</a></li>
+                  <li><a href="../newtag">Add a New Item</a></li>
+                  </li>
+                </ul>
             </ul>
-          </div><!--/.nav-collapse -->
+          </div>
+          <!--/.nav-collapse -->
         </div>
       </div>
     </div>
-
-
-    	<%= yield %>
-
-	
-
-
-     <!-- Le javascript
-    ================================================== -->
+    <%= yield %>
+    <!-- Le javascript
+      ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/jquery.js"></script>
     <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-transition.js"></script>
