--- a/views/success.erb
+++ b/views/success.erb
@@ -1,7 +1,10 @@
 
     <div class="container">
 
-      <h1>Bootstrap starter template</h1>
-      <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
+	    <div class="page-header">
+	     <h1>Success! <small>Trinket added.</small></h1>
+	    </div>
+      
+      <a href="../newtag">Add another?</a>
 
-    </div> <!-- /container -->
+    </div>
