--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,8 +7,8 @@
     <meta name="description" content="Change You Can Believe is coin collector that represents your savings in tangible things." />
     <meta name="author" content="Tom Arthur - NYU ITP" />
     <!-- Le styles -->
-    <link href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
-    <link href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
+    <link href="https://changeitp-assets.s3.amazonaws.com/bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link href="https://changeitp-assets.s3.amazonaws.com/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
     <style>
       body {
       padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
@@ -19,11 +19,11 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/ico/apple-touch-icon-144-precomposed.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/ico/apple-touch-icon-114-precomposed.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/ico/apple-touch-icon-72-precomposed.png" />
-    <link rel="apple-touch-icon-precomposed" href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/ico/apple-touch-icon-57-precomposed.png" />
-    <link rel="shortcut icon" href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/ico/favicon.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://changeitp-assets.s3.amazonaws.com/bootstrap/ico/apple-touch-icon-144-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://changeitp-assets.s3.amazonaws.com/bootstrap/ico/apple-touch-icon-114-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://changeitp-assets.s3.amazonaws.com/bootstrap/ico/apple-touch-icon-72-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" href="https://changeitp-assets.s3.amazonaws.com/bootstrap/ico/apple-touch-icon-57-precomposed.png" />
+    <link rel="shortcut icon" href="https://changeitp-assets.s3.amazonaws.com/bootstrap/ico/favicon.png" />
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -57,17 +57,17 @@
     <!-- Le javascript
       ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/jquery.js"></script>
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-transition.js"></script>
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-alert.js"></script>
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-modal.js"></script>
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-dropdown.js"></script>
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-scrollspy.js"></script>
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-tab.js"></script>
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-tooltip.js"></script>
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-popover.js"></script>
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-button.js"></script>
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-collapse.js"></script>
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-typeahead.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/jquery.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/bootstrap-transition.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/bootstrap-alert.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/bootstrap-modal.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/bootstrap-dropdown.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/bootstrap-scrollspy.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/bootstrap-tab.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/bootstrap-tooltip.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/bootstrap-popover.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/bootstrap-button.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/bootstrap-collapse.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/bootstrap-typeahead.js"></script>
   </body>
 </html>
