--- a/views/home.erb
+++ b/views/home.erb
@@ -7,8 +7,8 @@
     <meta name="description" content="" />
     <meta name="author" content="Tom Arthur - NYU ITP" />
     <!-- Le styles -->
-    <link href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
-    <link href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
+    <link href="https://changeitp-assets.s3.amazonaws.com/bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link href="https://changeitp-assets.s3.amazonaws.com/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
     <style>
       /* GLOBAL STYLES
       -------------------------------------------------- */
@@ -214,11 +214,11 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/ico/apple-touch-icon-144-precomposed.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/ico/apple-touch-icon-114-precomposed.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/ico/apple-touch-icon-72-precomposed.png" />
-    <link rel="apple-touch-icon-precomposed" href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/ico/apple-touch-icon-57-precomposed.png" />
-    <link rel="shortcut icon" href="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/ico/favicon.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://changeitp-assets.s3.amazonaws.com/bootstrap/ico/apple-touch-icon-144-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://changeitp-assets.s3.amazonaws.com/bootstrap/ico/apple-touch-icon-114-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://changeitp-assets.s3.amazonaws.com/bootstrap/ico/apple-touch-icon-72-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" href="https://changeitp-assets.s3.amazonaws.com/bootstrap/ico/apple-touch-icon-57-precomposed.png" />
+    <link rel="shortcut icon" href="https://changeitp-assets.s3.amazonaws.com/bootstrap/ico/favicon.png" />
   </head>
   <body>
     <!-- NAVBAR
@@ -263,7 +263,7 @@
     <div id="myCarousel" class="carousel slide">
     <div class="carousel-inner">
     <div class="item active">
-    <img src="http://itp.nyu.edu/~tca241/sinatra/change/public/img/slide-01.jpg" alt="" />
+    <img src="https://changeitp-assets.s3.amazonaws.com/bootstrap/img/slide-01.jpg" alt="" />
     <div class="container">
     <div class="carousel-caption">
     <h1>Loose Change.</h1>
@@ -273,21 +273,21 @@
     </div>
     </div>
     <div class="item">
-    <img src="http://changeitp-assets.s3.amazonaws.com/img/slide-02.jpg" alt="" />
+    <img src="https://changeitp-assets.s3.amazonaws.com/bootstrap/img/slide-02.jpg" alt="" />
     <div class="container">
     <div class="carousel-caption">
-    <h1>Another example headline.</h1>
-    <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+    <h1>Change helps you.</h1>
+    <p class="lead">See how your savings adds up toward the things you like.</p>
     <a class="btn btn-large btn-primary" href="#">Learn more</a>
     </div>
     </div>
     </div>
     <div class="item">
-    <img src="http://itp.nyu.edu/~tca241/sinatra/change/public/img/slide-03.jpg" alt="" />
+    <img src="https://changeitp-assets.s3.amazonaws.com/bootstrap/img/slide-03.jpg" alt="" />
     <div class="container">
     <div class="carousel-caption">
-    <h1>One more for good measure.</h1>
-    <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+    <h1>Change helps everyone.</h1>
+    <p class="lead">Track how your change can help your favorite charity.</p>
     <a class="btn btn-large btn-primary" href="#">Browse gallery</a>
     </div>
     </div>
@@ -303,22 +303,22 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
     <div class="span4">
-    <img class="img-circle" data-src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/holder/holder.js/140x140" />
-    <h2>Heading</h2>
-    <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
-    <p><a class="btn" href="#">View details &raquo;</a></p>
+    <img class="img-circle" data-src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/holder/holder.js/140x140" />
+    <h2>Your Change</h2>
+    <p>Track how your loose change adds up toward your favorite items & causes.</p>
+    <p><a class="btn" href="../trinkets">Your Change &raquo;</a></p>
     </div><!-- /.span4 -->
     <div class="span4">
-    <img class="img-circle" data-src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/holder/holder.js/140x140" />
-    <h2>Heading</h2>
-    <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-    <p><a class="btn" href="#">View details &raquo;</a></p>
+    <img class="img-circle" data-src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/holder/holder.js/140x140" />
+    <h2>Your Savings</h2>
+    <p>Find the exact amount of change in your collector.</p>
+    <p><a class="btn" href="../savings">View details &raquo;</a></p>
     </div><!-- /.span4 -->
     <div class="span4">
-    <img class="img-circle" data-src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/holder/holder.js/140x140" />
-    <h2>Heading</h2>
-    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-    <p><a class="btn" href="#">View details &raquo;</a></p>
+    <img class="img-circle" data-src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/holder/holder.js/140x140" />
+    <h2>Analyze</h2>
+    <p>Study your savings trends.</p>
+    <p><a class="btn" href="../lastcollection">View details &raquo;</a></p>
     </div><!-- /.span4 -->
     </div><!-- /.row -->
     <!-- START THE FEATURETTES -->
@@ -359,19 +359,19 @@
     <!-- Le javascript
       ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/jquery.js"></script>
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-transition.js"></script>
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-alert.js"></script>
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-modal.js"></script>
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-dropdown.js"></script>
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-scrollspy.js"></script>
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-tab.js"></script>
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-tooltip.js"></script>
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-popover.js"></script>
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-button.js"></script>
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-collapse.js"></script>
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-carousel.js"></script>
-    <script src="http://itp.nyu.edu/~tca241/sinatra/change/public/lib/bootstrap/js/bootstrap-typeahead.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/jquery.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/bootstrap-transition.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/bootstrap-alert.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/bootstrap-modal.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/bootstrap-dropdown.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/bootstrap-scrollspy.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/bootstrap-tab.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/bootstrap-tooltip.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/bootstrap-popover.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/bootstrap-button.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/bootstrap-collapse.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/bootstrap-carousel.js"></script>
+    <script src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/bootstrap-typeahead.js"></script>
     <script>
       !function ($) {
         $(function(){
