--- a/views/savings.erb
+++ b/views/savings.erb
@@ -1,21 +1,45 @@
 <div class="container">
-  <h1>Coins Collected</h1>
-  <p>Total saved: <%= currency(@lasttotal.total) %></p>
-  <p>Total number of pennies collected <%= @totalpenny %> </p>
-  <% if (@pennymoney > 0)%>
-  <p>That's <%= currency(@pennymoney) %> </p>
-  <% end %>
-  <p>Total number of nickels collected <%= @totalnickel %> </p>
-  <% if (@nickelmoney > 0)%>
-  <p>That's <%= currency(@nickelmoney) %> </p>
-  <% end %>
-  <p>Total number of dimes collected <%= @totaldime %> </p>
-  <% if (@dimemoney > 0)%>
-  <p>That's <%= currency(@dimemoney) %> </p>
-  <% end %>
-  <p>Total number of quarters collected <%= @totalquarter %> </p>
-  <% if (@quartermoney > 0)%>
-  <p>That's <%= currency(@quartermoney) %> </p>
-  <% end %>
+<div class="page-header">
+  <h1>Your Savings <small><a href="http://www.youtube.com/watch?v=whFBCIzwxp8">[cash money]</a></small></h1>
 </div>
-<!-- /container -->
+  <h2>Total saved: <%= currency(@lasttotal.total/100) %></p></h2>
+  
+  <ul class="thumbnails">
+  <li class="span3">
+    <div class="thumbnail">
+      <center><h2><%= @totalpenny%></h2></center>
+      <center><h3>Pennies</h3></center>
+      <center><p>That's  <%= currency(@pennymoney) %></p></center>
+    </div>
+  </li>
+  <li class="span3">
+    <div class="thumbnail">
+      <center><h2><%= @totalnickel%></h2></center>
+      <center><h3>Nickels</h3></center>
+      <center><p>That's  <%= currency(@nickelmoney) %></p></center>
+    </div>
+  </li>
+  <li class="span3">
+    <div class="thumbnail">
+      <center><h2><%= @totaldime%></h2></center>
+      <center><h3>Dimes</h3></center>
+      <center><p>That's  <%= currency(@dimemoney) %></p></center>
+    </div>
+  </li>
+  <li class="span3">
+    <div class="thumbnail">
+      <center><h2><%= @totalquarter%></h2></center>
+      <center><h3>Quarters</h3></center>
+      <center><p>That's  <%= currency(@totalquarter) %></p></center>
+    </div>
+  </li>
+</ul>
+  
+<a href="../lastcollection">What about historical data?</a>
+</div>
+
+
+
+
+
+
