updates to delete and add

--- a/views/about.erb
+++ b/views/about.erb
@@ -1,4 +1,17 @@
 <div class="container">
   <h1>About Change You Can Believe In</h1>
-  <p>This is a placeholder page. <a href="http://itp.howtomworks.com/change">In the mean time check out my blog</a></p>
+  <h4>Put loose change in context of things you care about.</h4>
+<p><center><a href="http://www.flickr.com/photos/tomarthur/8262159852/" title="IMG_1280 by tom.arthur, on Flickr"><img src="http://farm9.staticflickr.com/8071/8262159852_a63055abb0.jpg"  class="img-polaroid" width="298" height="500" alt="IMG_1280"></a></center></p>
+  <p class="lead">Change You Can Believe In is a coin collector that represents your savings in tangible things. It automatically logs the change you drop in, everyday.</p>
+  <p>
+  <center><a href="http://www.flickr.com/photos/tomarthur/8269085184/" title="trinkets by tom.arthur, on Flickr"><img src="http://farm9.staticflickr.com/8223/8269085184_22f4c358eb_z.jpg" width="640" height="128" alt="trinkets"></a></center></p>
+  
+  <p>Customized trinkets represent items you save for. Simply place a trinket on the dollar sign to see how your savings add up. And it's easy to <a href="../newtag">add new trinkets here.</a></p>
+
+
+  <p> For more information <a href="http://itp.howtomworks.com/change">visit the project documentation page on my blog.</a></p>
+   <small><p> Change You Can Believe In was created by Tom Arthur in Introduction to Physical Computing at NYU's Interactive Telecommunications Program. This website was created in Ruby/Sinatra as a project for CommLab Web.</p>
+ <p>
+  <a href="mailto:#">tom.arthur@nyu.edu</a></p><p>
+  <a href="http://itp.howtomworks.com">http://itp.howtomworks.com</a></p></small>
 </div>
