--- a/views/home.erb
+++ b/views/home.erb
@@ -103,6 +103,7 @@
       /* Center align the text within the three columns below the carousel */
       .marketing .span4 {
       text-align: center;
+      padding-bottom: 50px;
       }
       .marketing h2 {
       font-weight: normal;
@@ -268,7 +269,7 @@
     <div class="carousel-caption">
     <h1>Loose Change.</h1>
     <p class="lead">What do you do with it?.</p>
-    <a class="btn btn-large btn-primary" href="#">Yup</a>
+    <a class="btn btn-large btn-primary" href="../about">Save It</a>
     </div>
     </div>
     </div>
@@ -278,7 +279,7 @@
     <div class="carousel-caption">
     <h1>Change helps you.</h1>
     <p class="lead">See how your savings adds up toward the things you like.</p>
-    <a class="btn btn-large btn-primary" href="#">Learn more</a>
+    <a class="btn btn-large btn-primary" href="../trinkets">Save for Me</a>
     </div>
     </div>
     </div>
@@ -288,7 +289,7 @@
     <div class="carousel-caption">
     <h1>Change helps everyone.</h1>
     <p class="lead">Track how your change can help your favorite charity.</p>
-    <a class="btn btn-large btn-primary" href="#">Browse gallery</a>
+    <a class="btn btn-large btn-primary" href="../trinkets">Save for Us</a>
     </div>
     </div>
     </div>
@@ -303,56 +304,28 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
     <div class="span4">
-    <img class="img-circle" data-src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/holder/holder.js/140x140" />
     <h2>Your Change</h2>
     <p>Track how your loose change adds up toward your favorite items & causes.</p>
     <p><a class="btn" href="../trinkets">Your Change &raquo;</a></p>
     </div><!-- /.span4 -->
     <div class="span4">
-    <img class="img-circle" data-src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/holder/holder.js/140x140" />
     <h2>Your Savings</h2>
-    <p>Find the exact amount of change in your collector.</p>
+    <p>The cash value of your coins, including individual coin counts.</p>
     <p><a class="btn" href="../savings">View details &raquo;</a></p>
     </div><!-- /.span4 -->
     <div class="span4">
-    <img class="img-circle" data-src="https://changeitp-assets.s3.amazonaws.com/bootstrap/js/holder/holder.js/140x140" />
     <h2>Analyze</h2>
-    <p>Study your savings trends.</p>
+    <p>Study your savings trends and logs of every collection.</p>
     <p><a class="btn" href="../lastcollection">View details &raquo;</a></p>
     </div><!-- /.span4 -->
     </div><!-- /.row -->
-    <!-- START THE FEATURETTES -->
-    <!--
-      <hr class="featurette-divider">
-      
-      <div class="featurette">
-        <img class="featurette-image pull-right" src="../assets/img/examples/browser-icon-chrome.png">
-        <h2 class="featurette-heading">First featurette headling. <span class="muted">It'll blow your mind.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-      </div>
-      
-      <hr class="featurette-divider">
-      
-      <div class="featurette">
-        <img class="featurette-image pull-left" src="../assets/img/examples/browser-icon-firefox.png">
-        <h2 class="featurette-heading">Oh yeah, it's that good. <span class="muted">See for yourself.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-      </div>
-      
-      <hr class="featurette-divider">
-      
-      <div class="featurette">
-        <img class="featurette-image pull-right" src="../assets/img/examples/browser-icon-safari.png">
-        <h2 class="featurette-heading">And lastly, this one. <span class="muted">Checkmate.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-      </div>
-      
-      <hr class="featurette-divider">
-      -->
+
+
+
+
     <!-- /END THE FEATURETTES -->
     <!-- FOOTER -->
     <footer>
-    <p class="pull-right"><a href="#">Back to top</a></p>
     <p><a href="http://itp.howtomworks.com">Tom Arthur - NYU ITP 2012</a> CommLab Web & Physical Computing Final</p>
     </footer>
     </div><!-- /.container -->
