--- a/views/savings.erb
+++ b/views/savings.erb
@@ -30,12 +30,12 @@
     <div class="thumbnail">
       <center><h2><%= @totalquarter%></h2></center>
       <center><h3>Quarters</h3></center>
-      <center><p>That's  <%= currency(@totalquarter) %></p></center>
+      <center><p>That's  <%= currency(@quartermoney) %></p></center>
     </div>
   </li>
 </ul>
   
-<a href="../lastcollection">What about historical data?</a>
+<a href="../lastcollection">What about the details?</a>
 </div>
 
 
