--- a/views/trinkets.erb
+++ b/views/trinkets.erb
@@ -48,7 +48,10 @@
   <% end %>
   
 </ul>
-</div>
-  <% for thistag in @scans %>
+<h4>Recently Scanned Tags</h4><small>This section is a work in progress</small>
+ <% for thistag in @scans %>
   <p><%= thistag.tagid %></p>
   <% end %>
+
+</div>
+ 
