--- a/views/trinkets.erb
+++ b/views/trinkets.erb
@@ -4,7 +4,7 @@
 </div>
 <ul class="thumbnails">
   <% for thistag in @tags %>
-  <% @numavail = thistag.price / @total%>
+  <% @numavail = @total / thistag.price%>
   <% @toward =  thistag.price - @total%>
   <% if (@toward < 0) %>
   <% @toward = 100 %>
