--- a/views/trinkets.erb
+++ b/views/trinkets.erb
@@ -6,8 +6,8 @@
   <% for thistag in @pertags %>
   <% @numavail = @total / thistag.price%>
   <% @toward =  thistag.price - @total%>
-  <% @toward = 1 - (@toward / thistag.price)  %>
-  <% if (@toward >= 1) %>
+  <% @toward = (thistag.price / @total) * 100  %>
+  <% if (@toward >= 100) %>
   <% @toward = 100 %>
   <% else %>
   <% @toward %>
