--- a/views/trinkets.erb
+++ b/views/trinkets.erb
@@ -91,10 +91,24 @@
   
 </ul>
 <h4>Recently Scanned Tags</h4><small>This section is a work in progress</small>
- <% for thisscan in @scans %>
-  <p><% @thisitem = @tags.all(:tagid => thisscan) %></p>
-  <p><%= @thisitem.name %>
-  <% end %>
+
+<% for thistag in @lastscan%>
+	<% tagidsearch = thistag.tagid%>
+	<% tagidsearch.to_s %>
+	<% display = Tag.first(:tagid => tagidsearch)%>
+	<% if display.giving == true%>
+	<p><span class="label label-warning"><%= display.name %></span> scanned at <span class="badge"><%= display.created_on%></span> </p>
+	<% else %>
+	<p><span class="label label-success"><%= display.name %></span> scanned at <span class="badge"><%= display.created_on%></span> </p>
+	<% end %>
+	
+	
+	<p>
+	
+	<%end%>
+
+
+
 
 </div>
  
