improved tag data

--- a/views/coinscounted.erb
+++ b/views/coinscounted.erb
@@ -2,7 +2,7 @@
   
 <h2>Coin Count History <small>Every collection!</a></small></h2>
 
-  <h3>The last collection total was <%= currency(@lastt) %> and you have <%= currency(@totalcorrected) %>) in total.</h3>
+  <h3>The last collection total was <%= currency(@lastt) %> and you have <%= currency(@totalcorrected) %> in total.</h3>
   <h6>on <%= @lasttotal.created_on %> at <%= @lasttotal.created_at %></h6>
   
   <ul class="thumbnails">
