--- a/views/trinkets.erb
+++ b/views/trinkets.erb
@@ -96,11 +96,11 @@
 	<% tagidsearch = thistag.tagid%>
 	<% tagidsearch.to_s %>
 	<% display = Tag.first(:tagid => tagidsearch)%>
-	<% #if display.giving == true%>
+	<% if display.giving == true%>
 	<p><span class="label label-warning"><%= display.name %></span> scanned at <span class="badge"><%= display.created_on%></span> </p>
-	<% #else %>
+	<% else %>
 	<p><span class="label label-success"><%= display.name %></span> scanned at <span class="badge"><%= display.created_on%></span> </p>
-	<% #end %>
+	<% end %>
 	<%end%>
 
 
