improved tag data

--- a/views/trinkets.erb
+++ b/views/trinkets.erb
@@ -1,6 +1,6 @@
 <div class="container" />
 <div class="page-header">
-  <h1>What You're Saving For <small>trinkets represent causes & products</small></h1>
+  <h1>What You're Saving For <small>trinkets represent causes & things to buy</small></h1>
 </div>
 <ul class="thumbnails">
   <% for thistag in @pertags %>
@@ -90,7 +90,7 @@
   <% end %>
   
 </ul>
-<h4>Recently Scanned Tags</h4><small>This section is a work in progress</small>
+<h4>Recently Scanned Tags</h4>
 
 <% for thistag in @lastscan%>
 	<% tagidsearch = thistag.tagid%>
